modules/gdscript/tests/scripts/runtime/errors/utility_function_wrong_arg.gd
func test():
	var x = Color()
	print(floor(x)) # Built-in utility function.
